# ov2slam_universal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_thirdparty.sh
example/: mono_euroc.cpp
include/: estimator.hpp  logger.hpp  loop_closer.hpp  map_manager.hpp  mapper.hpp  optimizer.hpp  ov2slam.hpp  slam_params.hpp  visual_front_end.hpp  visualize.hpp
src/: camera_calibration.cpp  estimator.cpp  feature_extractor.cpp  loop_closer.cpp  map_manager.cpp  mapper.cpp  multi_view_geometry.cpp  optimizer.cpp  ov2slam.cpp  slam_params.cpp  visual_front_end.cpp  visualize.cpp  wrapper_js.cpp  wrapper_py.cpp
test/: CMakeLists.txt  mono_euroc.cpp  mono_euroc.py  test_euroc.cpp
test/parameters_files/accurate/euroc/: euroc_mono.yaml
